# nicojudgeWebsite

./: .gitignore  DATABASE_MIGRATION.md  NicoJudgeBlazorPage.sln  README.md  babel.config.js  buildCopyAndDeploy.sh  bun.lockb  deploynicojudge.sh  flake.nix  makefile  package-lock.json  package.json  webpack.config.js
NicoJudgeBlazorPage/: NicoJudgeBlazorPage.csproj  Program.cs  _Imports.razor
NicoJudgeBlazorPage/Pages/: AboutMe.razor  DndHelpers.razor  HeaderNavBar.razor  HeaderNavPar.razor  Index.razor  TestPage.razor
NicoJudgeBlazorPage/Properties/: launchSettings.json
NicoJudgeBlazorPage/wwwroot/: index.html
NicoJudgeBlazorPage/wwwroot/css/: DarkTheme.css  app.css  navBar.css
cicd/: .dockerignore  Dockerfile  Dockerfile.alpine  Dockerfile.chef  Dockerfile.debian  Dockerfile.debian.optimized  Dockerfile.dev  Dockerfile.nix  README.md  build.sh  docker-compose.yml
source/: .dockerignore  .gitignore  Cargo.toml  Cargo.toml.old  Dioxus.toml  diesel.toml  main.db  main.db-shm  main.db-wal
source/assets/: index.html
source/assets/styling/: navbar.css
source/migrations/: 001_create_blog_posts.sql
source/migrations/2025-07-04-113215_blog_posts/: down.sql  up.sql
source/src/: database.rs  lib.rs  main.rs  route.rs  schema.rs  test_server.rs
source/src/auth/: auth.rs  authentication.rs  cookies.rs  mod.rs  session.rs
source/src/components/: account.rs  admin.rs  bio.rs  errors.rs  login.rs  maintenance.rs  maintenance_banner.rs  mod.rs  new_edit_blog.rs  projects_list.rs
source/src/models/: account.rs  blog_post.rs  mod.rs  repo.rs  session.rs
source/src/views/: admin.rs  blog.rs  blog_table_contents.rs  home.rs  mod.rs  navbar.rs  projects.rs
src/: .gitignore  App.css  App.js  App.test.js  App.tsx  Cargo.toml  Dockerfile  GetData.js  README.md  flake.nix  gitProjects.js  index.js
src/Styles/: GlobalStyle.css  repoData.css
src/components/: AboutMe.tsx  ApplicationSwitcher.tsx  DiceRoller.tsx  Header.tsx  RepoList.tsx
src/dev/: previews.tsx
src/functions/: FetchDataPromise.ts  GetData.ts
src/src/: 3  app.rs  bio.rs  input.rs  lib.rs  main.rs  repos.rs
src/style/: tailwind.css
