[package]
name = "web"
version = "0.1.0"
authors = ["Nico Judge <nico.a.judge@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
# CLI configuration for getting the correct server address
dioxus-cli-config = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Only include diesel for server builds, not for web/WASM builds
diesel = { version = "2.2.11", features = ["sqlite"], optional = true }

[features]
default = ["web"]
# The feature that are only required for the web build target should be optional and only enabled in the web feature
web = ["dioxus/web"]
# The feature that are only required for the desktop build target should be optional and only enabled in the desktop feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the server build target should be optional and only enabled in the server feature
server = ["dioxus/server", "diesel"]

[build]
jobs = 2
incremental = true

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
