[package]
name = "web"
version = "0.1.0"
authors = ["Nico Judge <nico.a.judge@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
# CLI configuration for getting the correct server address
dioxus-cli-config = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# SQLx with SQLite support, migrations, and runtime features
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"], optional = true }
dioxus-fullstack = "0.6.3"
fmt = "0.1.0"
chrono = { version = "0.4.24", features = ["serde"] }
async-std = { version = "1.13.1", optional=true }
password-hash = { version = "0.5.0", optional=true }
# Updated scrypt to a compatible version with password-hash integration
scrypt = { version = "0.11", optional = true }
# Argon2 for password hashing (more modern and recommended)
argon2 = { version = "0.5.0", optional = true }
# rand = { version = "0.9.2", optional=true }

[features]
default = ["web"]
# The feature that are only required for the web build target should be optional and only enabled in the web feature
web = ["dioxus/web"]
# The feature that are only required for the desktop build target should be optional and only enabled in the desktop feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the server build target should be optional and only enabled in the server feature
server = ["dioxus/server", "sqlx", "argon2", "password-hash", "async-std"]

[build]
jobs = 2
incremental = true

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
